tests/neg-custom-args/captures/sep-shared.scala
class E extends caps.ExclusiveCapability
class S extends caps.SharedCapability

def par(x: E^, y: E^): E = ???

def test(x: E^) = par(x, x) // error

